cambiando color del link

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -3,7 +3,7 @@ $fuente_titulo : "Heebo", sans-serif;
 
 // Colores
 $bg-color: #ffffff;
-$contrast-color: #778da9;
+$contrast-color: #1E6079;
 $primary-color: #000000;
 $link-color: #3a3a3a;
 
