agregando la pagina de la pc de escritorio y agregando galeria con modal

--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -14,6 +14,14 @@
 
     .list { 
         padding: 0;
+
+        .list-content {
+            padding-bottom: 0.2rem;
+
+            &:last-child {
+                padding-bottom: 0;
+            }
+        }
         
         .link-list { 
             color: v.$link-color;
