--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,8 +1,14 @@
 @use 'base/variables' as v;
 @use 'base/mixins' as m;
 
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100dvh;
+}
+
 .footer {
-    padding: 2rem 0 4rem 0;
+    padding: 3rem 0 3rem 0;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
