--- a/src/scss/layout/_galeria.scss
+++ b/src/scss/layout/_galeria.scss
@@ -69,6 +69,9 @@
 }
 
 .btn-cerrar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 4rem;
     width: 4rem;
     border-radius: 50%;
