Cambaindo el fondo negro

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -2,10 +2,10 @@ $fuente_principal : "Poppins", sans-serif;
 $fuente_titulo : "Heebo", sans-serif;
 
 // Colores
-$bg-color: #ffffff;
-$contrast-color: #1E6079;
-$primary-color: #000000;
-$link-color: #3a3a3a;
+$bg-color: #000;
+$contrast-color: #ffffff59;
+$primary-color: #fff;
+$link-color: #a0a0a0;
 
 // Media Queries
 $telefono: 480px;
