--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,5 +1,5 @@
-$fuente_principal : "Poppins", sans-serif;
-$fuente_titulo : "Heebo", sans-serif;
+$fuente_principal : "Open Sans", serif;
+$fuente_titulo : "Playfair Display", serif;
 
 // Colores
 $bg-color: #000;
