--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -1,7 +1,8 @@
 @use 'base/variables' as v;
 @use 'base/mixins' as m;
 
-.main {
+.main,
+.desk {
     @include m.container-XL;
 
     @include m.tablet {
@@ -11,6 +12,36 @@
     @include m.desktop {
         @include m.container;
     }
+}
+
+.main {
+    .tarjeta {
+        z-index: 1;
+        width: 100%;
+        height: 100%;
+    }
+
+    .tarjeta-contenido {
+        display: flex;
+        gap: 5rem;
+        width: 100%;
+        background-color: v.$contrast-color;
+        cursor: pointer;
+
+       .tarjeta-img img { width: 300px; }
+
+       .tarjeta-info {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+            h2, p { margin: 0; }
+       }
+    }
+}
+
+.desk {
+    display: none;
 
     .list { 
         padding: 0;
