agregando el diseño de tarjetas a los productos

--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -70,9 +70,10 @@ img {
 body > section {
     padding-bottom: 10rem;
 }
-li {
-    list-style: none;
-}
+li { list-style: none; }
+
+.txt-align { text-align: center; }
+
 .fade-in {
     opacity: 0;
     transform: translateY(30px);
