--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -2,8 +2,8 @@ $fuente_principal : "Open Sans", serif;
 $fuente_titulo : "Playfair Display", serif;
 
 // Colores
-$bg-color: #000;
-$contrast-color: #ffffff59;
+$bg-color: #171717;
+$contrast-color: #686868;
 $primary-color: #fff;
 $link-color: #a0a0a0;
 
