--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -22,7 +22,7 @@
     box-shadow: rgba(0, 0, 0, 0.3) 0px 10px 30px 0px;
     cursor: pointer;
 
-    .tarjeta-img img { width: 300px; }
+    .tarjeta-img img { width: 300px; height: 200px; object-fit: cover; }
 
     .tarjeta-info {
         display: flex;
