--- a/src/css/style.css
+++ b/src/css/style.css
@@ -165,6 +165,7 @@ li { list-style: none; }
     background-color: var(--contrast-color);
     box-shadow: rgba(0, 0, 0, 0.3) 0px 10px 30px 0px;
     cursor: pointer;
+    margin-bottom: 2rem;
 
     .tarjeta-img img { width: 120px; height: 120px; object-fit: cover; }
 
@@ -182,6 +183,8 @@ li { list-style: none; }
     p { font-size: 1rem; }
 }
 
+.tarjeta:last-child { margin: 0; }
+
 @media (min-width: 768px) {
     .tarjeta {
         .tarjeta-img img { width: 300px; height: 200px; object-fit: cover; }
@@ -191,9 +194,10 @@ li { list-style: none; }
     }
 }
 
-.desk {
-    display: none;
+.hidden { display: none; }
 
+.desk,
+.pc {
     section { padding-bottom: 3rem; }
 
     section:last-child { padding-bottom: 10rem; }
